<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login_page">loginPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="login_button" translatable="false">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="file_name">File Name</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="pause_recording">Pause Recording</string>
    <string name="record_last_3_min_recording">Record Last 3 Minutes</string>
    <string name="upload_video">Upload Recorded Videos</string>

</resources>
